# learn-rust

./: .env  Cargo.toml  README.md  index.html
demo/: README.md
demo/arr/: array  array.rs
demo/demo/: complex.rs  demo1.rs  demo10  demo10.rs  demo11  demo11.rs  demo2.rs  demo3.rs  demo4  demo4.rs  demo5  demo5.rs  demo6  demo6.rs  demo7  demo7.rs  demo8  demo8.rs  demo9  demo9.rs  range
demo/enum/: enum_demo  enum_demo.rs  enum_demo2  enum_demo2.rs  enum_demo3  enum_demo3.rs  option_demo  option_demo.rs  option_demo2  option_demo2.rs
demo/error/: error  error.rs
demo/exception/: err  err.rs  err2  err2.rs  exception  exception.rs  hello.txt  panic  panic.rs
demo/for/: range  range.rs
demo/funct/: demo  demo.rs
demo/generics/: demo  demo.rs  demo2  demo2.rs  demo3  demo3.rs  generics  generics.rs  interface.rs  interface2  interface2.rs  trait_object  trait_object.rs  trait_pay  trait_pay.rs  trait_post.rs  trait_query  trait_query.rs  trait_sum  trait_sum.rs
demo/io/: demo  demo.rs  demo2  demo2.rs  file  file.rs  file_stream  file_stream.rs  file_write  file_write.rs  file_write_stream  file_write_stream.rs  file_write_stream2  file_write_stream2.rs
demo/iter/: demo.rs  iter  iter.rs
demo/macros/: demo  demo.rs  demo2  demo2.rs
demo/map_/: demo  demo.rs  map  map.rs
demo/match/: bind  bind.rs  demo  demo.rs  letif  letif.rs  macth  macth.rs  option  option.rs  while_  while_.rs
demo/object_/: object  object.rs  object2.rs  object2_main  object2_main.rs  object_dog  object_dog.rs  owner  owner.rs
demo/owner/: demo1.rs  demo10  demo10.rs  demo2  demo2.rs  demo3  demo3.rs  demo4.rs  demo5  demo5.rs  demo6  demo6.rs  demo7  demo7.rs  demo8.rs  demo9.rs  owner  owner.rs
demo/pkg/: main  main.rs  pkg_demo  pkg_demo.rs  pkg_demo2  pkg_demo2.rs  pkg_enum_demo  pkg_enum_demo.rs  pkg_std  pkg_std.rs  second_module.rs  use_  use_.rs
demo/slice_/: slice  slice.rs
demo/str/: string  string.rs
demo/struct/: struct_demo  struct_demo.rs
demo/trait/: demo1  demo1.rs  demo10.rs  demo11.rs  demo12  demo12.rs  demo2  demo2.rs  demo3  demo3.rs  demo4.rs  demo5  demo5.rs  demo6  demo6.rs  demo7  demo7.rs  demo8  demo8.rs  demo9  demo9.rs
demo/tuple_/: tuple  tuple.rs
demo/type_/: main  main.rs
demo/vec_/: demo  demo.rs  vec  vec.rs
src/: error.rs  lib.rs  main.rs
src/async/: main.rs
src/axum/: server.rs
src/channel/: main.rs
src/cli/: cli.rs  mod.rs
src/db/: mysql.rs
src/dto/: todo.rs
src/entities/: todo.rs
src/file/: mod.rs  read.rs  write.rs
src/fmt/: mod.rs
src/geo/: README.md  geohash.rs
static/: index.html  styles.css
(+18 files in other folders)
