[package]
name = "learn-rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "async"
path = "src/async/main.rs"

[[bin]]
name = "mutex"
path = "src/mutex/main.rs"

[[bin]]
name = "channel"
path = "src/channel/main.rs"

[[bin]]
name = "server"
path = "src/axum/server.rs"

[dependencies]
axum = "0.7"
rand = "0.3.14"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
