[package]
name = "learn-rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "async"
path = "src/async/main.rs"

[[bin]]
name = "mutex"
path = "src/mutex/main.rs"

[[bin]]
name = "channel"
path = "src/channel/main.rs"

[[bin]]
name = "server"
path = "src/axum/server.rs"

[[bin]]
name = "hello"
path = "src/test/main.rs"

[dependencies]
axum = "0.7"
rand = "0.3.14"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"


# ORM库
sea-orm = { version = "0.12", features = ["sqlx-mysql", "macros", "runtime-tokio"] }

# 环境变量
dotenvy = "0.15"

# 全局单例
once_cell = "1.18"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }

# 错误处理
anyhow = "1.0"

sqlx = { version = "0.7", features = ["mysql", "runtime-tokio"] }
